--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nostrum
-      natus magni incidunt animi! Minus at veniam quasi dolore, nam
-      reprehenderit dolorem sapiente minima ut dignissimos natus aperiam itaque
-      magni.
-    </h1>
+    <h1>andrea è bello</h1>
     <h2>Lorem ipsum dolor sit amet.</h2>
     <h3>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, magni!
