--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>andrea è bello</h1>
-    <h2>Lorem ipsum dolor sit amet.</h2>
+    <h2>Molto bello</h2>
     <h3>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, magni!
     </h3>
