--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       perspiciatis corrupti, fuga suscipit tempora repudiandae sint aspernatur
       id?
     </h4>
-    <h5>Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
+    <h5>Bellissimo</h5>
   </body>
 </html>
