--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo, magni!
     </h3>
     <h4>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ut error
-      perspiciatis corrupti, fuga suscipit tempora repudiandae sint aspernatur
-      id?
+      Non sappiamo fare le presentazioni
     </h4>
     <h5>Bellissimo</h5>
   </body>
